# unitree-go2-dog

./: .gitignore  setup_sdk.sh
python_pipeline/: PIPELINE_DEVELOPER_GUIDE.md  README.md  main.py  run_pipeline.sh
python_pipeline/activities/: go_motion.py  see_and_say.py  sport_single_tests.py
python_pipeline/bridges/go2_cpp/: CMakeLists.txt  go2_sport_bridge.cpp  go2_sport_bridge.hpp  go2_video_bridge.cpp  go2_video_bridge.hpp
python_pipeline/config/: settings.py
python_pipeline/modules/camera/: base.py  go2_camera.py
python_pipeline/modules/speech/: base.py  null_speech.py  system_speech.py
python_pipeline/modules/sport/: __init__.py  base.py  go2_sport.py
python_pipeline/pipeline/: contracts.py  runner.py
